Modifications to get wrapped lines to align correctly.

--- a/base.css
+++ b/base.css
@@ -78,14 +78,16 @@ pre { margin-left: 1em; }
 pre > code { display: inline-block; }
 
 
-/* Use an mdash for the list bullet. */
+/* Use an em-dash for the list bullet. */
 ul {
-    list-style:none;
-    margin-left:0;
+    list-style: none;
+    /* Relative positioning on the 'ul' lets the absolutely-positioned
+       marker align relative to it.*/
+    position: relative;
 }
 ul li:before {
     content: "\2014";
-    padding-right: .5em;
+    position: absolute; left: 10px;
 }
 
 /* This is here rather than inside elements/toc.html because browsers
